(library
 (name tools)
 (public_name tools)
 (flags (:standard -w -9@27-30@32-40@8 -safe-string))
 (preprocess (pps ppx_deriving.eq ppx_deriving.ord ppx_deriving.show ppx_deriving.map ppx_deriving.fold))
 (libraries data-encoding tezos-micheline utils base parsexp fmt num ezjsonm yojson michel ptime smartML))
