opam-version: "2.0"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]
maintainer: ["SmartPy team"]
authors: ["SmartPy team"]
bug-reports: "https://smartpy.io/"
homepage: "https://smartpy.io/"
version: "0.1"
synopsis: "SmartML tools library"
depends: [
  "michel"
]
